fixed mobile menu gap between navburger toggle button and list items

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -382,7 +382,7 @@ nav {
 
 .nav-list {
 	@include mq(xs) {
-		margin-top: $half-margin;
+		//margin-top: $half-margin;
 		//visibility: hidden;
 	}
 	@include mq(sm) {
